--- a/modules-available/sysconfig/templates/ad_ldap-homedir.html
+++ b/modules-available/sysconfig/templates/ad_ldap-homedir.html
@@ -14,6 +14,7 @@
 	<input name="ssl" value="on" type="hidden">
 	<input type="hidden" name="certificate" value="{{certificate}}">
 	{{/ssl}}
+	<input name="fixnumeric" value="{{fixnumeric}}" type="hidden">
 	<input name="fingerprint" value="{{fingerprint}}" type="hidden">
 
 	<div class="slx-bold">{{lang_credentialPassing}}</div>
