--- a/modules-available/sysconfig/templates/ad-start.html
+++ b/modules-available/sysconfig/templates/ad-start.html
@@ -55,10 +55,21 @@
 	<br>
 	<div>
 		<label>
+			<input type="checkbox" name="fixnumeric" {{#fixnumeric}}checked{{/fixnumeric}}> {{lang_fixNumeric}}
+		</label>
+		<div>
+			<i>{{lang_fixNumericDescription}}</i>
+		</div>
+	</div>
+	<br>
+	<div>
+		<label>
 			<input type="checkbox" name="ssl" onchange="$('#cert-box').css('display', this.checked ? '' : 'none')" {{#ssl}}checked{{/ssl}}> {{lang_ssl}}
 		</label>
+		<div>
+			<i>{{lang_sslDescription}}</i>
+		</div>
 	</div>
-	<i>{{lang_sslDescription}}</i>
 	<br/>
 	<hr>
 	<div class="btn-group">
