[locationinfo] Fix davinci backend connection test, minor tweaks to web view

--- a/modules-available/locationinfo/templates/page-panels.html
+++ b/modules-available/locationinfo/templates/page-panels.html
@@ -34,7 +34,7 @@
 				</td>
 				{{#hasRunmode}}
 					<td>
-						<a class="btn btn-default btn-xs" href="?do=runmode&amp;module=locationinfo&amp;modeid={{paneluuid}}">
+						<a class="btn btn-default btn-xs" href="?do=runmode&amp;module=locationinfo&amp;modeid={{paneluuid}}&amp;redirect=?do=locationinfo">
 							<span class="glyphicon glyphicon-edit"></span>
 						</a>
 						{{assignedMachineCount}}
