[translation] Added translation for 'subnet' filter

--- a/modules-available/statistics/templates/filterbox.html
+++ b/modules-available/statistics/templates/filterbox.html
@@ -75,7 +75,8 @@ var slxFilterNames = {
 	clientip: '{{lang_ip}}',
 	state: '{{lang_usageState}}',
 	location: '{{lang_location}}',
-	currentuser: '{{lang_currentUser}}'
+	currentuser: '{{lang_currentUser}}',
+	subnet: '{{lang_subnet}}'
 };
 
 slxLocations = {{{locations}}};
