[exams] small design changes

--- a/modules-available/exams/templates/page-exams-vis.html
+++ b/modules-available/exams/templates/page-exams-vis.html
@@ -1,6 +1,15 @@
-<h2>{{lang_headingGraphicalOverview}}</h2>
+<div class="panel panel-default">
+	<div class="panel-heading">
+		{{lang_headingGraphicalOverview}}
+	</div>
+	<div class="panel-body">
+		<div id="timeline" class="slx-space"></div>
+	</div>
+</div>
 
-<div id="timeline" class="slx-space"></div>
+
+
+
 
 <script type="application/javascript"><!--
 
