--- a/modules-available/exams/style.css
+++ b/modules-available/exams/style.css
@@ -15,3 +15,7 @@
 .vis-item.disabled {
     background-color: rgba(189, 195, 199, 1.0) !important;
 }
+
+.table > tbody > tr > td {
+    vertical-align: middle;
+}
