--- a/modules-available/exams/templates/page-add-edit-exam.html
+++ b/modules-available/exams/templates/page-add-edit-exam.html
@@ -111,8 +111,8 @@
 	<input type="hidden" name="token" value="{{token}}">
 	<input type="hidden" name="examid" value="{{exam.examid}}">
 	<div class="text-right" style="margin-bottom: 20px">
+		<button type="button" id="cancelButton" class="btn btn-default">{{lang_cancel}}</button>
 		<button type="submit" id="saveButton" class="btn btn-primary" style="margin-right: 10px"><span class="glyphicon glyphicon-floppy-disk"></span> {{lang_save}}</button>
-		<button type="button" id="cancelButton" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span> {{lang_cancel}}</button>
 	</div>
 
 </form>
